began updating the FFX ModelingShell for Groovy v. 2.0.5; updated the POMs to use JOCL v. 2.0.0; updated the start-up scripts to be self-consistent